--- a/3_JS_version.html
+++ b/3_JS_version.html
@@ -78,7 +78,7 @@
         소셜 미디어 피드 새로 고침부터 애니메이션 및 대화형 지도 표시에 이르기까지, JavaScript 기능은 웹사이트의 사용자 경험을 개선할 수 있습니다. 
         클라이언트 측 스크립팅 언어로서 JavaScript는 월드 와이드 웹의 핵심 기술 중 하나입니다. 예를 들어 인터넷 탐색 시 웹페이지에서 이미지 슬라이드쇼, 클릭하면 표시되는 
         드롭 다운 메뉴 또는 객체 색상의 동적 변화를 보게 된다면 이는 JavaScript의 효과를 보는 것입니다.
-        git testing text
+        git testing text11
     </p>
     <!-- 처음 night_day로 했을때 아이디가 같기 떄문에 위에것만 버튼의 이름이 바뀌었다. 근데 1억개라면 하나하나 바꿔줄 수 없기때문에 자기 자신을 가리키는 this를 사용한다. -->
     <input id="night_day2" type="button" value="night" onclick="
